2007-04-11  Konstantin Triger <kostat@mainsoft.com>

	* WebServiceHandlerFactory.cs: Use HttpRequest.IsLocal to determine
		local request in 2.0 profile.

2007-03-21  Konstantin Triger <kostat@mainsoft.com>

	* TypeStubManager.cs, Methods.cs, ServerType.cs: add support for the 2.0
		feature, which enables declaring WebService/WebMethods attributes
		in interface.

2007-03-11  Konstantin Triger <kostat@mainsoft.com>

	* WebServiceHandlerFactory.cs: throw on protocol version mismatch
		for 2.0 profile only.

2007-03-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TypeStubManager.cs: fixed BindingInfo.ctor, it does not takes Name
	property from WebServiceBindingAttribute in .net 2.0

2007-03-04  Konstantin Triger <kostat@mainsoft.com>

	* WebServiceHandlerFactory.cs: throw on protocol version mismatch.

2007-02-01  Konstantin Triger <kostat@mainsoft.com>

	* TypeStubManager.cs, Methods.cs: refactor BindingInfo contruction to contain
		either declared Bindings or a default one.

2007-02-01  Konstantin Triger <kostat@mainsoft.com>

	* HttpSimpleWebServiceHandler.cs: Provide better error info.

2007-01-22  Miguel de Icaza  <miguel@novell.com>

	* HttpSimpleClientProtocol.cs, SoapHttpClientProtocol.cs: Hook up
	RegisterMapping and UnregisterMapping.

	* HttpWebClientProtocol.cs (RegisterMapping, UnregisterMapping):
	Keep track of all the async invocations that are created, based on
	the "userState" key.

	(CancelAsync): Implement. 
	
2006-12-22  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpSoapWebServiceHandler.cs : (SerializeFault) requestMessage
	  could be null.

2006-12-21  Atsushi Enomoto  <atsushi@ximian.com>

	* WebServiceHelper.cs :
	  added Soap12FaultToSoapException conversion method (copied from
	  SoapHttpClientProtocol.cs).
	  Added couple of switching fault code getter (by soap12 flag).
	* SoapMessage.cs: added IsSoap12 property to simplify SOAP 1.2
	  conditional code.
	* HttpSimpleServerProtocolFactory.cs, WebServiceHelper.cs,